--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8' />
     <title></title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <link rel="stylesheet" href="/static/main.css">
+    <link rel="stylesheet" href="static/styles.css">
     <script src="https://kit.fontawesome.com/edb2f9c366.js" crossorigin="anonymous"></script>
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.css' rel='stylesheet' />
@@ -70,9 +70,9 @@
         <div v-for="location in locations" class="location-container" v-if="uploadType != ''">
           <span class="location-text">[[ location.text ]]</span>
           <span class="location-name" v-on:click="flyToLocation(location)">
-            <i class="fas fa-map-marker-alt"></i>  [[ location.name ]]
+            <i class="fas fa-map-marker-alt"></i>  [[ location.place_name ]]
           </span>
-          <span class="location-context">"...[[ location.context ]]..."</span>
+          <span class="location-context">"[[ location.context.replace(/(.{120})..+/, "$1…") ]]"</span>
         </div>
 
       </div>
@@ -84,7 +84,8 @@
 
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="../static/main.js"></script>
+  <script src="static/config.js"></script>
+  <script src="static/main.js"></script>
 
 </body>
 </html>
